# nonos-sign

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/algs/: alg_id.rs  mod.rs  traits.rs
src/algs/ed25519/: keygen.rs  mod.rs  sign.rs  verify.rs
src/algs/mldsa65/: ffi.rs  host_randombytes.c  keygen.rs  mod.rs  sign.rs  verify.rs
src/cli/: derive_id.rs  dispatch.rs  keygen.rs  mod.rs  parse.rs  sign_release.rs  usage.rs  verify_cert.rs  verify_manifest.rs  verify_policy.rs  verify_release.rs
src/cli/sign_id_cert/: args.rs  build.rs  mod.rs  parse.rs  run.rs  sign.rs
src/cli/sign_manifest/: args.rs  build.rs  endpoint.rs  mod.rs  parse.rs  run.rs  sign.rs
src/cli/trust_policy/: args.rs  mod.rs  run.rs
src/error/: mod.rs  variants.rs
src/error/display/: alg.rs  derive.rs  encode_cert.rs  encode_manifest.rs  (+5 more)
src/keys/: format.rs  mod.rs  read.rs  types.rs  write.rs
src/release/: log.rs  manifest.rs  mod.rs
src/sign/: dispatch.rs  mod.rs
src/verify/: cert.rs  cursor.rs  decoded.rs  glob.rs  manifest.rs  mod.rs
src/wire/: constants.rs  mod.rs
tests/: artifacts.rs  host_trust.rs  release.rs  valid_chain.rs
tests/cert/: epoch_stale.rs  expired.rs  mod.rs  nonos_id_revoked.rs  not_yet_valid.rs  serial_revoked.rs  ta_bad_sig.rs  ta_policy_missing.rs
tests/fixtures/: bundle.rs  cert_input.rs  cert_sign.rs  consts.rs  manifest_input.rs  manifest_sign.rs  mod.rs  policy.rs
tests/manifest/: caps_exceed.rs  cert_id_mismatch.rs  mod.rs  namespace_outside.rs  publisher_bad_sig.rs  publisher_key_revoked.rs  publisher_policy.rs
(+25 files in other folders)
